chore: resolve spacing issue in deposit input.

--- a/client-portal/src/components/depositInput/DepositInput.scss
+++ b/client-portal/src/components/depositInput/DepositInput.scss
@@ -13,6 +13,7 @@
     width: 60%;
     border: none;
     outline: none;
+    padding: 0.3rem;
   }
   .credit-cards {
     display: flex;
@@ -29,4 +30,5 @@
   color: white;
   font-weight: 600;
   font-size: 1.25rem;
+  padding-top: 0.5rem;
 }
